@startuml

class Scene {
  id: int
  --
  nom: string
  equipe: int
  description: string
  format: string
  lienVignetteImage: string
  lienExecutable: string
  lienImage: string
  created_at: datetime
  updated_at: datetime
}

class User {
  id: int
  --
  nom: string
  email: string
  password: string
  admin: boolean
  avatar: string
  created_at: datetime
  updated_at: datetime
}

class Commentaire {
  id: int
  --
  user: User
  scene: Scene
  titre: string
  corp: string
  created_at: datetime
  updated_at: datetime
}

class Note{
  user: User
  scene: Scene
  --
  note: int [0,5]
  created_at: datetime
  updated_at: datetime
}

class Favori {
  user: User
  scene: Scene
}

User  --  Commentaire : commente
Scene  --  Commentaire : concerne

User "*" -- "*" Scene : Possède

User "*" -- "*" Scene : Possède
Note -- User : Donne une note à
Note -- Scene : Concerne

(User, Scene) . Favori

@enduml
